kubernetes/applications/zigbee2mqtt/kubernetes-01/service.yml
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  selector: {}
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
