kubernetes/applications/zigbee2mqtt/kubernetes-01/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
spec:
  ingressClassName: nginx
  rules:
    - host: &host "zigbee2mqtt.tools.internal.place"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: zigbee2mqtt
              port:
                name: "http"
  tls:
    - hosts:
        - *host
      secretName: zigbee2mqtt-tls
